fix overflow

--- a/src/components/ui/portfolio/mainsection.module.css
+++ b/src/components/ui/portfolio/mainsection.module.css
@@ -37,7 +37,7 @@
     width: 100%;
     height: 380px;
     max-width: 395px;
-    width: 395px;
+    /* width: 395px; */
     height: 247px;
     gap: 0px;
     border-radius: 24px;
