--- a/src/components/ui/portfolio/shape1/shapeone.module.css
+++ b/src/components/ui/portfolio/shape1/shapeone.module.css
@@ -30,10 +30,20 @@
     max-width: 642px;
   }
 }
+
 @media (max-width: 640px) {
   .main_Shape_cont {
     width: 100%;
     height: 380px;
-    max-width: 395px;
+    /* max-width: 395px; */
+  }
+}
+@media (max-width: 420px) {
+  .mob1_res {
+    scale: 0.85;
+    left: 10px;
+  }
+  .mob2_res{
+    scale: 0.85;
   }
 }
